--- a/restmvc/pom.xml
+++ b/restmvc/pom.xml
@@ -8,9 +8,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<properties>
-		<netbeans.hint.deploy.server>gfv3ee6</netbeans.hint.deploy.server>
-	</properties>
+	<properties></properties>
 
 	<dependencies>
 		<dependency>
